@@ -3,17 +3,17 @@ package org.ignast.stockinvesting.api.controller;
 import lombok.val;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 final class CompanyDTOTest {
 
     @Test
     public void shouldPreserveNonNestedAttributes() {
-        val company = new CompanyDTO("someId", "Amazon", "United States", "United States Dollar", Collections.emptyList());
+        final val company = new CompanyDTO("someId", "Amazon", "United States", "United States Dollar", Collections.emptyList());
         assertThat(company.getId()).isEqualTo("someId");
         assertThat(company.getHomeCountry()).isEqualTo("United States");
         assertThat(company.getName()).isEqualTo("Amazon");
@@ -22,37 +22,37 @@ final class CompanyDTOTest {
 
     @Test
     public void shouldPreserveListings() {
-        List<ListingDTO> listings = Arrays.asList(new ListingDTO("New York Stock Exchange", "Amazon"));
+        final val listings = List.of(new ListingDTO("New York Stock Exchange", "Amazon"));
         assertThat(anyCompanyWith(listings).getListings()).isEqualTo(listings);
     }
 
     @Test
     public void shouldPreserveMultipleListings() {
-        List<ListingDTO> listings = Arrays.asList(new ListingDTO("New York Stock Exchange", "Amazon"),
+        final val listings = asList(new ListingDTO("New York Stock Exchange", "Amazon"),
                 new ListingDTO("Hong Kong Stock Exchange", "Amazon"));
         assertThat(anyCompanyWith(listings).getListings()).isEqualTo(listings);
     }
 
     @Test
     public void shouldDropAnyIndividualNullListing() {
-        ListingDTO listing = new ListingDTO("New York Stock Exchange", "Amazon");
-        assertThat(anyCompanyWith(Arrays.asList(null, listing)).getListings()).isEqualTo(Arrays.asList(listing));
+        final val listing = new ListingDTO("New York Stock Exchange", "Amazon");
+        assertThat(anyCompanyWith(asList(null, listing)).getListings()).isEqualTo(List.of(listing));
     }
 
     @Test
     public void shouldAllowNullFieldsToEnableJavaxValidation() {
-        val company = new CompanyDTO(null, null, null, null, null);
+        final val company = new CompanyDTO(null, null, null, null, null);
         assertThat(company.getListings()).isNull();
         assertThat(company.getId()).isNull();
         assertThat(company.getName()).isNull();
 
-        val listing = new ListingDTO(null, null);
+        final val listing = new ListingDTO(null, null);
         assertThat(listing.getMarketIdentifier()).isNull();
         assertThat(listing.getStockSymbol()).isNull();
     }
 
 
-    private CompanyDTO anyCompanyWith(List<ListingDTO> listings) {
+    private CompanyDTO anyCompanyWith(final List<ListingDTO> listings) {
         return new CompanyDTO("anyId","anyName", "anyCountry", "United States Dollar", listings);
     }
 }
